--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -14,7 +14,7 @@
       <div class="form-group">
         <label>Nombre</label>
         <input [(ngModel)]="heroe.nombre"
-                type="text" name=""
+                type="text" name="nombre"
                class="form-control"
                placeholder="Nombre del héroe"
                required
@@ -22,7 +22,7 @@
       </div>
       <div class="form-group">
         <label>Casa</label>
-        <select name="" class="form-control"
+        <select name="casa" class="form-control"
                 [(ngModel)]="heroe.casa">
           <option value="Marvel">Marvel</option>
           <option value="DC">DC</option>
@@ -31,10 +31,11 @@
       <div class="form-group">
         <label>Bio</label>
         <textarea [(ngModel)]="heroe.bio"
-                name="" class="form-control" required> </textarea>
+                name="bio" class="form-control"> </textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-outline-success">
+        <button [disabled]="!forma.valid"
+                type="submit" class="btn btn-outline-success">
           Guardar cambios
         </button>
       </div>
