--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -17,18 +17,36 @@
           <th scope="col">#</th>
           <th scope="col">Nombre</th>
           <th scope="col">Casa</th>
-          <th scope="col">Opciones</th>
+          <th scope="col" style="text-right">Opciones</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr *ngFor="let k of heroes | keys ; let i = index ">
+          <td>{{ i +1 }}</td>
+          <td>{{ heroes[k].nombre}}</td>
+          <td>{{ heroes[k].casa}}</td>
+          <td class="text-right w120 ">
+            <button [routerLink]="['/heroe', k]"
+                    class="btn btn-outline-primary">
+              Editar
+            </button>
+            <button (click)="borrarHeroe(k)"
+                    class="btn btn-outline-danger ml-2">
+              Eliminar
+
+            </button>
+          </td>
         </tr>
         </tbody>
       </table>
+      <div *ngIf="(heroes | keys).length === 0 && !loading"
+              class="alert alert-warning" role="alert">
+        No hay mas Heroes!
+      </div>
+      <div *ngIf="loading"
+           class="alert alert-warning" role="alert">
+        <strong> Cargando...</strong>
+      </div>
     </div>
   </div>
 </div>
